# academic-projects

./: .gitignore  5  Makefile  RANDOM-MIB.java  README.md  Reset.java  ResetValidator.java  SNMPv2-CONF.java  SNMPv2-SMI.java  SNMPv2-TC.java  UnpredictableEntryRow.java  UnpredictableEntryRowFactory.java  analisedosficheiros.c  cliente.c  cliente.h  cmodels.c  cmodels.cpp  const  const.c  controlador  controlador.c  controlador.h  controladorNamedpipes.c  engine  engine.c  filter  filter.c  filter.h  gerador  gerador.c  hashtable.c  hashtable.h  interface.h  lpis.l  lpis.y  makefile  modelos.c  models.xml  parserXML.c  parserXML.h  (+13 more)
Exercices/guiao1/: a.out
Exercices/guiao2/: ex1.c
Exercices/guiao3/: ex2.c  interpretador
Exercices/guiao5/: cena.c  ex1-v2.c  ex1.c  ex3.c  ex5.c  (+1 more)
Fase2Teste/: CMakeLists.txt  Escala.cpp  Rotacao.cpp  Rotacao.h  Translacao.cpp  Translacao.h  engine  engine.cpp  engine.h  escala.h  ex2.c  gerador.c  group.cpp  group.h  models.xml  rotacao.h  translacao.h
Fase4/gerador/: CMakeLists.txt  Gerador.h  gerador.cpp
Fase4/gerador/cmake/: CMakeCache.txt  Makefile
Operating-Systems/: README.md
PacketCounter/: PacketCounter.iws
StreamProcessing/: controlador.c  spawn.c  window.c
computer-graphics/: README.MD
li3/: client_process.c  client_process.h  interface.c  product_process.c  validar.c  validar.h
projecto/: Central.java  Servidor.java
sipl/: README.md  lex.yy.c  lpis.y  y.tab.c  y.tab.h
snmp-net-management/: README.md
src/: AgentConfig.properties  RANDOM_MIB.java  SNMPv2_CONF.java  jcrex1.xml
udp-management/: README.md
(+136 files in other folders)
